--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,3 +11,6 @@ tokio = { version = "0.2", features = ["macros"] }
 warp = "0.2"
 log = "0.4"
 pretty_env_logger = "0.3"
+
+[dev-dependencies]
+spectral = "^0.6.0"
