--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,6 +12,7 @@ warp = "0.2"
 log = "0.4"
 pretty_env_logger = "0.3"
 serde = { version = "1.0", features = ["derive"] }
+regex = "1"
 
 [dev-dependencies]
 spectral = "^0.6.0"
