--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,6 +13,8 @@ log = "0.4"
 pretty_env_logger = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 regex = "1"
+pkg-version = "^1.0"
 
 [dev-dependencies]
 spectral = "^0.6.0"
+pkg-version = "^1.0"
