--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,7 +14,9 @@ pretty_env_logger = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 regex = "1"
 pkg-version = "^1.0"
+getset = "^0.1.0"
 
 [dev-dependencies]
 spectral = "^0.6.0"
 pkg-version = "^1.0"
+mockall = "^0.6.0"
