disable cargo publish for server package

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -3,12 +3,13 @@ name = "server"
 version = "0.1.0"
 authors = ["Josh Jones <ohblonddev@gmail.com>"]
 edition = "2018"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 tokio = { version = "0.2", features = ["macros"] }
-warp = "0.2"
+warp = "^0.2.2"
 log = "0.4"
 pretty_env_logger = "0.3"
 serde = { version = "1.0", features = ["derive"] }
