--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,11 +12,12 @@ tokio = { version = "0.2", features = ["macros"] }
 warp = "^0.2.2"
 log = "0.4"
 pretty_env_logger = "0.4"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0" }
 regex = "1"
 pkg-version = "^1.0"
 getset = "^0.1.0"
 quiz_domain = { path="../quiz_domain" }
+simple_quiz_domain_impl = { path="../simple_quiz_domain_impl" }
 
 [dev-dependencies]
 spectral = "^0.6.0"
