use thiserror to simplify error object organisation
closes #33

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,6 +17,7 @@ regex = "1"
 pkg-version = "^1.0"
 getset = "^0.1.0"
 quiz_domain = { path="../quiz_domain" }
+thiserror = "1.0"
 
 [dev-dependencies]
 spectral = "^0.6.0"
