--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -23,3 +23,7 @@ thiserror = "1.0"
 spectral = "^0.6.0"
 pkg-version = "^1.0"
 mockall = "^0.7.0"
+reqwest = { version = "0.10", features = ["json"] }
+anyhow = "1.0"
+serde_json = "1.0"
+http = "0.2"
