--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,6 +18,7 @@ pkg-version = "^1.0"
 getset = "^0.1.0"
 quiz_domain = { path="../quiz_domain" }
 thiserror = "1.0"
+cfg-if = "0.1"
 
 [dev-dependencies]
 spectral = "^0.6.0"
@@ -27,3 +28,4 @@ reqwest = { version = "0.10", features = ["json"] }
 anyhow = "1.0"
 serde_json = "1.0"
 http = "0.2"
+lazy_static = "1"
