--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,13 +12,18 @@ tokio = { version = "0.2", features = ["macros"] }
 warp = "^0.2.2"
 log = "0.4"
 pretty_env_logger = "0.4"
-serde = { version = "1.0" }
+serde = { version = "1.0", features = ["derive"] }
 regex = "1"
 pkg-version = "^1.0"
 getset = "^0.1.0"
 quiz_domain = { path="../quiz_domain" }
 thiserror = "1.0"
 cfg-if = "0.1"
+
+[dependencies.confy]
+path = "../confy"
+features = ["yaml_conf"]
+default-features = false
 
 [dev-dependencies]
 spectral = "^0.6.0"
@@ -29,3 +34,4 @@ anyhow = "1.0"
 serde_json = "1.0"
 http = "0.2"
 lazy_static = "1"
+quiz_domain_mocks = { path="../quiz_domain_mocks" }
