--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,6 +19,7 @@ getset = "^0.1.0"
 quiz_domain = { path="../quiz_domain" }
 thiserror = "1.0"
 cfg-if = "0.1"
+structopt = "0.3"
 
 [dependencies.confy]
 path = "../confy"
@@ -35,3 +36,4 @@ serde_json = "1.0"
 http = "0.2"
 lazy_static = "1"
 quiz_domain_mocks = { path="../quiz_domain_mocks" }
+assert_cmd = "1.0"
