--- a/confy/Cargo.toml
+++ b/confy/Cargo.toml
@@ -10,13 +10,11 @@ edition = "2018"
 
 [dependencies]
 serde = "^1.0"
-toml = { version = "^0.5", optional = true }
 directories = "^2.0"
 serde_yaml = { version = "0.8", optional = true }
 
 [features]
-default = ["toml_conf"]
-toml_conf = ["toml"]
+default = ["yaml_conf"]
 yaml_conf = ["serde_yaml"]
 
 [[example]]
