--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -2,9 +2,9 @@ name: Server Application Tests
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build:
