--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -33,6 +33,7 @@ mockall = "^0.7.2"
 reqwest = { version = "0.10", features = ["json"] }
 anyhow = "1.0"
 serde_json = "1.0"
+serde_yaml = "^0.8"
 http = "0.2"
 lazy_static = "1"
 quiz_domain_mocks = { path="../quiz_domain_mocks" }
