only run confy pipeline tests when changes are made to confy package

--- a/.github/workflows/confy.yml
+++ b/.github/workflows/confy.yml
@@ -3,8 +3,12 @@ name: Confy Package Tests
 on:
   push:
     branches: [main]
+    paths:
+      - 'confy/**'
   pull_request:
     branches: [main]
+      paths:
+        - 'confy/**'
 
 jobs:
   build:
