Separate application config module into separate application_config crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["server", "quiz_domain", "quiz_domain_mocks", "confy"]
+members = ["server", "quiz_domain", "quiz_domain_mocks", "confy", "application_config"]
