--- a/application_config/Cargo.toml
+++ b/application_config/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 thiserror = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0" }
 
 [dependencies.confy]
 path = "../confy"
