Replace quiz_domain_mocks crate with mocks in server crate (#49)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["server", "quiz_domain", "quiz_domain_mocks", "confy", "application_config"]
+members = ["server", "quiz_domain", "confy", "application_config"]
