--- a/server_backend/Cargo.toml
+++ b/server_backend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "server"
+name = "server_backend"
 version = "0.1.0"
 authors = ["Josh Jones <ohblonddev@gmail.com>"]
 edition = "2018"
