--- a/quiz_api/Cargo.toml
+++ b/quiz_api/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "server_backend"
+name = "quiz_api"
 version = "0.1.0"
 authors = ["Josh Jones <ohblonddev@gmail.com>"]
 edition = "2018"
