--- a/quiz_api/Cargo.toml
+++ b/quiz_api/Cargo.toml
@@ -16,6 +16,7 @@ quiz_domain = { path = "../quiz_domain" }
 regex = "1"
 serde = { version = "1.0", features = ["derive"] }
 structopt = "0.3"
+structured_log_bodies = { path = "../structured_log_bodies" }
 thiserror = "1.0"
 tokio = { version = "0.2", features = ["full"] }
 warp = "^0.2.2"
